# memex

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  ruff.toml  ty.toml
.beads/: issues.jsonl
.claude/skills/dignified-python-313/: SKILL.md  VERSION-CONTEXT.md  checklist.md  cli-patterns.md  dignified-python-core.md  pattern-table.md  type-annotations-common.md  type-annotations-delta.md
.claude/skills/python-tooling/: SKILL.md
.github/workflows/: ci.yml  docs.yml
design/: config-system.md
docs/: index.md
scripts/: bootstrap  sync-to-main
src/memex/: __init__.py  agent.py  cache.py  cli.py  config.py  context.py
src/memex/db/: __init__.py  connection.py  introspection.py
src/memex/ops/: __init__.py  query.py  schema.py
tests/: test_agent.py  test_cache.py  test_cli.py  test_config.py  test_context.py  test_memex.py
tests/db/: test_connection.py  test_introspection.py
tests/ops/: __init__.py  test_query.py  test_schema.py
